please read harder thank you

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,8 @@ commands:
     description: opens menu for NPC functionality
     usage: /<command>
     permission: yourplugin.yourcommandpermission
+
+  parkour:
+    description: parkour manager
+    usage: /<command>
+    permission: yourplugin.yourcommandpermission
